# Graphics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Event.cpp  Event.h  GameEngine.cpp  GameEngine.h  Geometry.cpp  Log.cpp  Log.h  Makefile  Memory.cpp  Memory.h  Model.cpp  Model.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Util.h  Window.cpp  Window.h  app  app.cpp  cmake_install.cmake  test  test.c
demo/: CMakeLists.txt  DemoApp.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
logs/: log.txt
res/: vertex.glsl
res/models/Truss/: Truss.mtl
res/shaders/: fragment.glsl  fragmentLighting.glsl  vertex.glsl
